Changes from 2.0 to 2.0p1:
	- made kfree_skb inline
	- upgraded kernel to 2.6.19
	- upgraded iproute

Changes from 2.0alpha to 2.0:
	- downgraded net-snmp to 5.2.3
	- fixed (again) the calculation of cpu stats, now differences
	  are returned (merge from 1.0)

Changes from 1.0p3 to 2.0alpha:
	- changed the kernel 2.4 to 2.6, currently 2.6.18
	- removed grsecurity
	- removed pcmcia-cs
	- removed hostap (as it is included in the kernel)
	- iptables upgraded to 1.3.6
	- upgraded net-snmp to 5.3.1
	- upgraded openssl to 0.9.7l
	- removed bridge support (improving routing performance)
	- removed the route cache for ipv4 (improving routing performance)
	- disabled any QoS support and removed 'tc' utility
	- turned off policy routing, and made only one route table
	- removed IPSEC support / openswan (improving routing performance)
	- added LEF (linux express forwarding)
	- removed wireless support completely

Changes from 1.0p2 to 1.0p3:
	- raised the default IP_MAX_MEMBERSHIPS from 20 to 128 in
	  net/ipv4/igmp.c. If anyone needs higher values, set it
	  through /proc.
	- upgraded the linux kernel to version 2.4.33.3
	- upgraded grsec to 2.1.9 for 2.4.33.3

Changes from 1.0p1 to 1.0p2:
	- upgraded madwifi to svn rev 1692
	- upgraded the kernel to version 2.4.33
	- upgraded grsec to 2.1.9
	- upgraded iptables to 1.3.5

Changes from 1.0 to 1.0p1:
	- enabled some watchdog devices in the kernel
	  all in modules
	- tuned ld-uClibc.so to skip searching in its own directory
	  first
	- upgraded postgresql lib to v7.4.13

Changes from 0.2p8 to 1.0:
	- version rename
	- improved the cfpkg_add to compare cflinux major versions
	  packages are compiled for and currently running system
	- write_helper now checks the validity of the image with
	  an sha1 digest. also, a .tar.gz file can be included in
	  the cflinux.img
	- upgraded madwifi to madwifi-ng-svn-1531
	- upgraded hostap-driver to version 0.4.7
	- upgraded hostapd to version 0.4.8