@@ -23,7 +23,7 @@
 # cflinux version
 VERSION_MAJOR = 2
 VERSION_MINOR = 0
-VERSION_PATCH = 1
+VERSION_PATCH = 2
 
 RELEASE_STRING := $(VERSION_MAJOR).$(VERSION_MINOR)
 ifneq ($(VERSION_PATCH),)
